--- a/WebContent/css/css1/estilos.css
+++ b/WebContent/css/css1/estilos.css
@@ -1,5 +1,7 @@
 body {
-	background: rgb(6, 155, 245, 0.6);
+	background: url(../../images/background-index.jpeg);
+	background-attachment: fixed;
+	background-size: cover;
 	font-family: 'Open Sans', sans-serif;
 }
 
