--- a/WebContent/pagina/css/estilos-imagenes.css
+++ b/WebContent/pagina/css/estilos-imagenes.css
@@ -35,3 +35,45 @@
     -moz-box-shadow: 0px 0px 23px 1px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 23px 1px rgba(0,0,0,0.75);
 }
+
+@media screen and (max-width: 530px){
+
+    .imagen-profesora{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 411px){
+
+    .imagen-profesora{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 361px){
+
+    .imagen-profesora{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 530px){
+
+    .imagen-profesora1{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 411px){
+
+    .imagen-profesora1{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 361px){
+
+    .imagen-profesora1{
+        width: 100%;
+    }
+}
